# megamind

./: .bazelrc  .gitignore  BUILD  BUILD.bazel  CONTRIBUTING.md  MODULE.bazel  README.md  WORKSPACE  go.mod  go.sum  go_dependencies.bzl
.github/ISSUE_TEMPLATE/: story.md  story.yaml
.github/workflows/: codeql.yml  main.yml
docs/: ROADMAP.md
docs/diagrams/: megamind.drawio  simple.drawio
services/ingest/: BUILD.bazel  main.go
services/ingest/cmd/: BUILD.bazel  cmd.go  grpc.go  http.go  root.go  serve.go
services/ingest/grpc/: BUILD.bazel  service.go  service_test.go
services/ingest/grpc/proto/: BUILD.bazel
services/ingest/http/: BUILD.bazel  service.go  service_test.go
services/ingest/ingest/: BUILD.bazel  ingest.go  ingest_test.go
services/ingest/proto/: BUILD.bazel  service.pb.go  service.proto  service_grpc.pb.go
services/ingest/service/: BUILD.bazel  service.go  service_test.go
services/ingest/service/proto/: BUILD.bazel  service.proto
subgraph/: BUILD.bazel  subgraph.pb.go  subgraph.proto
terraform/: .terraform.lock.hcl  main.tf  variables.tf
terraform/modules/k8s/dashboard/: main.tf
terraform/modules/knative/eventing/: main.tf
terraform/modules/knative/operator/: main.tf  operator_v1.7.0.yaml
terraform/modules/knative/serving/: main.tf
terraform/modules/megamind/: main.tf  megamind.yml  subgraph_ingester.yml  variables.tf
tools/megamind/: BUILD.bazel  main.go
tools/megamind/cmd/: BUILD.bazel  cmd.go  dgraph.go  dgraph_ingest.go  dgraph_ingest_subgraph.go  root.go
tools/megamind/cmd/testdata/: subgraphs.json
