load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "subgraph",
    srcs = ["subgraph.pb.go"],
    importpath = "github.com/z5labs/megamind/subgraph",
    visibility = ["//visibility:public"],
    deps = [
        "@org_golang_google_protobuf//reflect/protoreflect",
        "@org_golang_google_protobuf//runtime/protoimpl",
    ],
)
