load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("@io_bazel_rules_docker//go:image.bzl", "go_image")

go_library(
    name = "ingest_lib",
    srcs = ["main.go"],
    importpath = "github.com/z5labs/megamind/services/ingest",
    visibility = ["//visibility:private"],
    deps = ["//services/ingest/cmd"],
)

go_binary(
    name = "ingest",
    embed = [":ingest_lib"],
    visibility = ["//visibility:public"],
)

go_image(
    name = "image",
    embed = [":ingest_lib"],
    visibility = ["//visibility:public"],
)