load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("@io_bazel_rules_docker//go:image.bzl", "go_image")
load("@io_bazel_rules_docker//container:container.bzl", "container_push")

go_library(
    name = "ingest_lib",
    srcs = ["main.go"],
    importpath = "github.com/z5labs/megamind/services/ingest",
    visibility = ["//visibility:private"],
    deps = ["//services/ingest/cmd"],
)

go_binary(
    name = "ingest",
    embed = [":ingest_lib"],
    visibility = ["//visibility:public"],
)

go_image(
    name = "image",
    embed = [":ingest_lib"],
    visibility = ["//visibility:public"],
)

container_push(
    name = "push_image",
    image = ":image",
    format = "OCI",
    registry = "ghcr.io",
    repository = "z5labs/megamind",
    tag = "$(version)",
    tags = ["manual"]
)