load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "ingest_lib",
    srcs = ["main.go"],
    importpath = "github.com/z5labs/megamind/services/ingest",
    visibility = ["//visibility:private"],
    deps = ["//services/ingest/cmd"],
)

go_binary(
    name = "ingest",
    embed = [":ingest_lib"],
    visibility = ["//visibility:public"],
)
