load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "grpc",
    srcs = ["service.go"],
    importpath = "github.com/z5labs/megamind/services/ingest/grpc",
    visibility = ["//visibility:public"],
    deps = [
        "//services/ingest/grpc/proto",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//credentials/insecure",
        "@org_uber_go_zap//:zap",
    ],
)

go_test(
    name = "grpc_test",
    srcs = ["service_test.go"],
    embed = [":grpc"],
    deps = [
        "//services/ingest/grpc/proto",
        "//subgraph",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//credentials/insecure",
        "@org_uber_go_zap//:zap",
    ],
)
