load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "grpc",
    srcs = ["service.go"],
    importpath = "github.com/z5labs/megamind/services/ingest/grpc",
    visibility = ["//visibility:public"],
    deps = [
        "//services/ingest/ingest",
        "//services/ingest/proto",
        "@org_golang_google_grpc//:grpc",
        "@org_golang_google_grpc//credentials/insecure",
    ],
)

go_test(
    name = "grpc_test",
    srcs = ["service_test.go"],
    embed = [":grpc"],
    deps = [
        "//services/ingest/ingest",
        "//services/ingest/proto",
        "//subgraph",
        "@com_github_stretchr_testify//assert",
        "@org_golang_google_grpc//:grpc",
        "@org_golang_google_grpc//credentials/insecure",
        "@org_uber_go_zap//:zap",
    ],
)
