load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "http",
    srcs = ["service.go"],
    importpath = "github.com/z5labs/megamind/services/ingest/http",
    visibility = ["//visibility:public"],
    deps = [
        "//services/ingest/ingest",
        "//subgraph",
        "@com_github_gin_gonic_gin//:gin",
        "@org_golang_google_protobuf//encoding/protojson",
        "@org_golang_google_protobuf//proto",
        "@org_uber_go_zap//:zap",
    ],
)

go_test(
    name = "http_test",
    srcs = ["service_test.go"],
    embed = [":http"],
    deps = [
        "//services/ingest/ingest",
        "@com_github_stretchr_testify//assert",
        "@org_uber_go_zap//:zap",
    ],
)
