load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "proto_proto",
    srcs = ["service.proto"],
    visibility = ["//visibility:public"],
    deps = ["//subgraph:subgraph_proto"],
)

go_proto_library(
    name = "proto_go_proto",
    compilers = ["@io_bazel_rules_go//proto:go_grpc"],
    importpath = "github.com/z5labs/megamind/services/ingest/proto",
    proto = ":proto_proto",
    visibility = ["//visibility:public"],
    deps = ["//subgraph"],
)

go_library(
    name = "proto",
    embed = [":proto_go_proto"],
    importpath = "github.com/z5labs/megamind/services/ingest/proto",
    visibility = ["//visibility:public"],
)
