load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "proto",
    srcs = [
        "service.pb.go",
        "service_grpc.pb.go",
    ],
    importpath = "github.com/z5labs/megamind/services/ingest/proto",
    visibility = ["//visibility:public"],
    deps = [
        "//subgraph",
        "@org_golang_google_grpc//:grpc",
        "@org_golang_google_grpc//codes",
        "@org_golang_google_grpc//status",
        "@org_golang_google_protobuf//reflect/protoreflect",
        "@org_golang_google_protobuf//runtime/protoimpl",
    ],
)
