load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "service",
    srcs = ["service.go"],
    importpath = "github.com/z5labs/megamind/services/ingest/service",
    visibility = ["//visibility:public"],
    deps = [
        "//services/ingest/service/proto",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//credentials/insecure",
        "@org_uber_go_zap//:zap",
    ],
)
